[gd_scene load_steps=94 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_000.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_002.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_003.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_004.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_005.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_006.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_007.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_008.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_009.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_010.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_011.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_012.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_013.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_014.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_015.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_016.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_017.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_018.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_019.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_020.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_021.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_022.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_023.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_024.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_025.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_026.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_027.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_028.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/Player_One/Front/Walk/0_Citizen_Walk_029.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_000.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_001.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_002.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_003.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_004.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_005.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_006.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_007.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_008.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_009.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_010.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_011.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_012.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_013.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_014.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_015.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_016.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_017.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_018.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_019.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_020.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_021.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_022.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_023.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_024.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_025.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_026.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_027.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_028.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Player/Player_One/Back/Walk/0_Citizen_Walk_029.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_000.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_001.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_002.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_003.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_004.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_005.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_006.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_007.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_008.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_009.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_010.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_011.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_012.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_013.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_014.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_015.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_016.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_017.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_018.png" type="Texture" id=80]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_019.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_020.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_021.png" type="Texture" id=83]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_022.png" type="Texture" id=84]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_023.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_024.png" type="Texture" id=86]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_025.png" type="Texture" id=87]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_026.png" type="Texture" id=88]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_027.png" type="Texture" id=89]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_028.png" type="Texture" id=90]
[ext_resource path="res://Sprites/Player/Player_One/Side/Walk/0_Citizen_Walk_029.png" type="Texture" id=91]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ) ],
"loop": true,
"name": "side",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 100.173
height = 72.576

[node name="Player" type="Area2D"]
position = Vector2( 179.375, 208.661 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 400

[node name="Sprite_Player" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "front"

[node name="Collision_Player" type="CollisionShape2D" parent="."]
scale = Vector2( 0.4, 0.45 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
